test/expected/typedef_eti.out
typedef extern int SI
               ^
16: error: "typedef extern int" is illegal for built-in type
